--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,16 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!-- description -->
+		<div id="top-banner">
+		    <h1> Description </h1>
+			<p>Je suis Daniela !</p>
+		</div>
+		<!-- compétence -->
+		<div id="top-banner">
+		    <h1> compétence </h1>
+			<p>en cours!</p>
+		</div>
 		
 	
 </body></html>
